--- a/Chasm.Grammar.English/Chasm.Grammar.English.csproj
+++ b/Chasm.Grammar.English/Chasm.Grammar.English.csproj
@@ -18,7 +18,7 @@
     <!-- Header -->
     <AssemblyName>Chasm.Grammar.English</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
-    <Version>1.0.0</Version>
+    <Version>0.1.0</Version>
 
     <!-- Title, Description, Tags -->
     <Title>$(AssemblyName)</Title>
@@ -42,7 +42,9 @@
     <None Include="README.md" Pack="true" PackagePath="\" />
     <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
     <InternalsVisibleTo Include="Chasm.Grammar.Tests" />
-    <ProjectReference Include="..\Chasm.Grammar\Chasm.Grammar.csproj" />
+    <!-- <ProjectReference Include="..\Chasm.Grammar\Chasm.Grammar.csproj" /> -->
+    <PackageReference Include="Chasm.Utilities" Version="2.5.1" />
+    <PackageReference Include="Chasm.Formatting" Version="2.3.5" />
   </ItemGroup>
 
 </Project>
