🚧 Revamp all data structures and parsing

--- a/Chasm.Grammar.English/Chasm.Grammar.English.csproj
+++ b/Chasm.Grammar.English/Chasm.Grammar.English.csproj
@@ -43,7 +43,7 @@
     <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
     <InternalsVisibleTo Include="Chasm.Grammar.Tests" />
     <InternalsVisibleTo Include="Chasm.Grammar.Benchmarks" />
-    <!-- <ProjectReference Include="..\Chasm.Grammar\Chasm.Grammar.csproj" /> -->
+    <ProjectReference Include="..\Chasm.Grammar\Chasm.Grammar.csproj" />
     <PackageReference Include="Chasm.Utilities" Version="2.5.1" />
     <PackageReference Include="Chasm.Formatting" Version="2.3.5" />
   </ItemGroup>
