--- a/Chasm.Grammar/Chasm.Grammar.csproj
+++ b/Chasm.Grammar/Chasm.Grammar.csproj
@@ -47,4 +47,8 @@
     <PackageReference Include="Chasm.Formatting" Version="2.3.5" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
